vlib/v/checker/tests/operator_overloading_return_type_option_or_result.out
vlib/v/checker/tests/operator_overloading_return_type_option_or_result.vv:3:22: error: return type cannot be Option or Result
    1 | type Vec = []int
    2 | 
    3 | fn (v Vec) + (u Vec) !Vec {
      |                      ~~~~
    4 |     if v.len != u.len {
    5 |         return error('Operations require dim(v) == dim(u)')
vlib/v/checker/tests/operator_overloading_return_type_option_or_result.vv:10:22: error: return type cannot be Option or Result
    8 | }
    9 | 
   10 | fn (v Vec) - (u Vec) ?Vec {
      |                      ~~~~
   11 |     if v.len != u.len {
   12 |         return none
